# scale-extension-interfaces

./: .gitignore  .golangci.yaml  Cargo.toml  MAINTAINERS.md  README.md  go.mod  index.ts  interfaces.go  lib.rs  package-lock.json  package.json  tsconfig.json
