[package]
name = "scale_extension_interfaces"
version = "0.1.4"
edition = "2021"
description = "The Scale Extension Interfaces for generating host and guest extensions across multiple languages"
homepage = "https://scale.sh"
repository = "https://github.com/loopholelabs/scale-extension-interfaces"
license = "Apache-2.0"
exclude = [
    "**/*.go",
    "**/*.ts",
    "**/*.js",
    "*.go",
    "*.ts",
    "*.js",
    "*.json",
    "go.mod",
    "go.sum",
    "node_modules",
    "dist",
    "target"
]

[lib]
path = "lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
